Fix import wms on IE9 and improves CSS

--- a/src/components/importwms/style/importwms.less
+++ b/src/components/importwms/style/importwms.less
@@ -14,8 +14,8 @@
     position: relative;
   }
 
-  input[type=url], .tt-dropdown-menu {
-    width: 625px;
+  input[name=url], .tt-dropdown-menu {
+    width: 586px;
     padding-right: 30px;
   }
 
@@ -104,14 +104,15 @@
 
   .bt-connect {
     position: absolute;
-    left: 630px;
+    left: 596px;
     top: 0px;
+    width: 120px;
   }
 
   .open-wms-list {
     cursor: pointer;
     position: absolute;
-    left: 587px;
+    left: 566px;
     top: .7em;
     font-size: 14px;
   }
